<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="6sp"
                android:text="@string/registration_form"
                android:textSize="24sp"
                android:gravity="center_horizontal" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "10dp"
                app:cardElevation = "4dp"
                app:cardCornerRadius = "8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/username"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:hint="@string/answer"
                        android:inputType="textNoSuggestions"
                        android:textSize="16sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "10dp"
                app:cardElevation = "4dp"
                app:cardCornerRadius = "8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:hint="@string/answer"
                        android:inputType="textPassword"
                        android:textSize="16sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "10dp"
                app:cardElevation = "4dp"
                app:cardCornerRadius = "8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textSize="16sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "10dp"
                app:cardElevation = "4dp"
                app:cardCornerRadius = "8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "10dp"
                app:cardElevation = "4dp"
                app:cardCornerRadius = "8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/phone"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:hint="@string/answer"
                        android:inputType="text|number"
                        android:textSize="16sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "10dp"
                app:cardElevation = "4dp"
                app:cardCornerRadius = "8dp" >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/groupname"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextGroupname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/groupname"
                        android:inputType="textNoSuggestions"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="16dp"
                android:text="@string/register_user"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/already_registered_n_click_here_to_login"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>